项目中的表格代码

--- a/angular-require-case-master/index.html
+++ b/angular-require-case-master/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>卫生服务中心</title>
-	<link href="css/app.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>定时调度队列表格</title>
+    <link href="css/app.css" rel="stylesheet">
 </head>
+<!-- <script src="https://cdn.bootcss.com/angular.js/1.6.3/angular.min.js"></script> -->
+<link rel="stylesheet" href="libs/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="libs/tm.pagination-master/css/pagination.css">
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+<script src="libs/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="libs/underscore-min.js"></script>
+<!-- <script src="libs/tm.pagination-master/js/tm.pagination.min.js"></script> -->
+
 <body>
-	<div ui-view></div>
-	<footer>卫生服务中心</footer>
-	<script data-main="js/main" src="libs/require.js"></script>
+    <div ui-view class="ui-view-style"></div>
+    <script data-main="js/main" src="libs/require.js"></script>
 </body>
+
 </html>
