--- a/angular-require-case-master/index.html
+++ b/angular-require-case-master/index.html
@@ -12,7 +12,7 @@
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
 <script src="libs/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script src="libs/underscore-min.js"></script>
-<!-- <script src="libs/tm.pagination-master/js/tm.pagination.min.js"></script> -->
+<script src="libs/layDate-v5.0.9/laydate/laydate.js"></script>
 
 <body>
     <div ui-view class="ui-view-style"></div>
